Changed page title

--- a/index.html
+++ b/index.html
@@ -3,9 +3,8 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>CodePen - A Pen by judyta</title>
+  <title>Billie Jean King - tribute page</title>
   <link rel="stylesheet" href="./style.css">
-
 </head>
 
 <body>
